[tool.poetry]
name = "ethnode-requestor"
version = "0.0.1"
description = ""
authors = ["Golem Factory <contact@golem.network>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.9"
yapapi = "^0.9.2"
ansicolors = "^1.1.8"
quart = "^0.17.0"
aiohttp = "^3.8.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
